fixed text align. modified utbliding part repartition. fixed kunskaper part margins. fixed mobile version.

--- a/css/main.css
+++ b/css/main.css
@@ -186,6 +186,7 @@ a:hover{
 	width: 75%;
 	float: right;
 	display:block;
+	text-align: justify;
 }
 .main-section h1 span{
 	border-bottom: 3px solid #11ABB0;
@@ -235,36 +236,45 @@ a:hover{
 	position: relative;
 	top: 50%;
 	left: 50%;
+	margin: 0;
 	-ms-transform: translate(-50%, -50%);
 	-webkit-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);	
 }
-#kunskaper .section-main{
+#kunskaper .section-main, #utbildning .section-main{
+	margin-top: 15px;
+	text-align: left;
+	flex-flow: row wrap;
 	display: -moz-box;
 	display: -ms-flexbox;
 	display: -webkit-flex;
 	display: flex;  
 	-webkit-flex-flow: row wrap;
-	flex-flow: row wrap;
-	margin-top: 15px;
 } 
-#kunskap1, #kunskap2, #kunskap3{
+#kunskap1, #kunskap2, #kunskap3, #utbildning1, #utbildning2{
 	flex: 1;
 	-webkit-flex: 1;
 	-ms-flex: 1;
+}
+#kunskap1, #kunskap2, #kunskap3{
 	font-size: 85%;
 	line-height: 25px;
+	margin-right:2%;
 	color:white;
 	width: 15%;
+	padding: 10px 20px;
 	border-radius: 3px;
-	padding: 10px;
-	margin-right:2%;
 	background:rgba(0,0,0,.7);
 	border-width:1px;	
     border-style:solid;
     border-color: #ffff;
 }
-
+#utbildning1{
+	margin-right:6%;
+}
+#utbildning h2{
+	margin: 0;
+}
 .clear-fix{
 	clear: both;
 }
@@ -468,14 +478,17 @@ footer .social a:hover{
 		float: none;
 		display:block;
 	}
-	.section-header ,.section-main h2 , h3, h3 a{
+	.section-header {
 		text-align: center;
+	}
+	.section-main h2 , h3, h3 a{
+		text-align: left;
 	}
 
 	#kunskaper {
-		height: 1200px;
+		height: 1000px;
 	}
-	#kunskaper .section-main{
+	#kunskaper .section-main , #utbildning .section-main{
 		display: block;
 	}
 	#kunskap1, #kunskap2, #kunskap3{
@@ -487,7 +500,6 @@ footer .social a:hover{
 		padding:10px; 
 		margin:10px auto;
 	}
-
 	#kontakt .section-header p{
 		text-align: left;
 	}
@@ -512,6 +524,8 @@ footer .social a:hover{
 @media screen and (max-width: 575px) {
 	#info{
 		width:60%; 
+	}#kunskaper {
+		height: 1100px;
 	}
 	input[type="submit"]{
 		width: 20%;
